--- a/index.html
+++ b/index.html
@@ -768,7 +768,8 @@
                         <p>&#9552;&#9552;&#9733; Bachata Artists&#9733;&#9552;&#9552;</p><p>
                           Kiko &amp; Christina</p><p>
                           Sergio &amp; Beige</p><p>
-                          Roberto &amp; Magdalena</p><p>
+                          Pablo &amp; Lucia</p><p></p>
+                          Roberto &amp; Magdalena</p><p></p>
                           David &amp; Ilona</p><p>
                           Guillermo &amp; Anastasia</p><p>
                           Denis &amp; Mariana</p><p>
@@ -777,6 +778,8 @@
                           Alexej &amp; Florence</p><p></p>
                           Hari &amp; Lilien</p><p></p>
                           Rocio Kolofon</p><p></p>
+                          Bebars &amp; Paola</p><p></p>
+                          Eddy &amp; Milena</p><p></p>
                           David &amp; Jessy</p><p></p>
                           &amp; More Artists to confirm</p><p>  
                           </p><p>
@@ -784,26 +787,37 @@
                           DJ Dimensions</p><p>
                           DJ Papito</p><p>
                           DJ Roberto</p><p>
+                          DJ Lobo</p><p>
                           DJ Dia</p><p>
                           DJ Edu</p><p>
                           </p><p>
                           &#9552;&#9552;&#9733; Show Teams&#9733;&#9552;&#9552;</p><p>
+                          Fuego Ladies Hamburg</p><p>
+                          K Ladies Berlin</p><p></p>
                           Sabor a Bachata</p><p>
-                          Grupo Esencia</p><p>
+                          Fuerza Team Frankfurt</p><p>
+                          Las Sirenas</p><p>
+                          Son Latino Karlsruhe Ladies</p><p>
+                          Alma Show Salsa Team</p><p>
                           Alma Dance Show Team</p><p>
                           DNA Show Team</p><p></p>
                           &#9552;&#9552;&#9733; Location &#9733;&#9552;&#9552;</p><p>
                           The event is taking place in the most beautiful and biggest dance school in Hesse, the Tanzschule Weiss. The main party will take place at a &#11088;&#65039; 500 m2 area!!!&#11088;&#65039;</p><p>
                           There will be additional room for classes and socials.</p>
                           
-                          <!-- <p>&#9552;&#9552;&#9733; Party Prices&#9733;&#9552;&#9552;</p><p>
-                          Friday party:</p><p>
-                          15 EUR without Workshops / 20 EUR with Workshops</p><p>
-                          Saturday party:</p><p>
-                          20 EUR without Workshops / 25 EUR with Workshops</p><p>
-                          Sunday party:</p><p>
-                          5 EUR</p><p> -->
-                          ** JacknJill Competition included in Full,Party &amp; Marathonpass otherwise participation costs 15 EUR</p>
+                          <h3>Party Prices </h3>
+                          <div class="event-details">
+                            <p><strong>🎉 Thursday Party</strong> (Theme: Neon):</p><p>
+                              5 EUR included Workshop</p><p>
+                              <Address>Address:Alt-Bornheim 35, 60385 Frankfurt am Main**</Address>
+                              <strong>💃 Friday Party</strong> (Theme: Red):</p><p>
+                              20 EUR without Workshops / 25 EUR with Workshops</p><p>
+                              <strong>🥂 Saturday Party</strong> (Theme: Gala):</p><p>
+                              25 EUR without Workshops / 30 EUR with Workshops</p><p>
+                              <strong>☀️ Sunday Party</strong> (Theme: Vanilla Summer Colors):</p><p>
+                              7 EUR included Workshops from 17:30</p><p>
+                              ** JacknJill Competition included in Full,Party &amp; Marathonpass otherwise participation costs 15 EUR</p>
+                          </div>
                       </div>
                       <div class="text-center">
                         <h5 class="display-4">Jack n Jill - Dance Competition 2025</h5>
