--- a/index.html
+++ b/index.html
@@ -775,11 +775,11 @@
                             <p><strong>🎉 Thursday Party</strong> (Theme: Neon):</p><p>
                               5 EUR included Workshop</p><p>
                               <Address>Address:Alt-Bornheim 35, 60385 Frankfurt am Main**</Address>
-                              <strong>💃 Friday Party</strong> (Theme: Red):</p><p>
+                              <strong>💃 Friday Party</strong> (Theme: Red & Black):</p><p>
                               20 EUR without Workshops / 25 EUR with Workshops</p><p>
-                              <strong>🥂 Saturday Party</strong> (Theme: Gala):</p><p>
+                              <strong>🥂 Saturday Party</strong> (Theme: Gala & Gold):</p><p>
                               25 EUR without Workshops / 30 EUR with Workshops</p><p>
-                              <strong>☀️ Sunday Party</strong> (Theme: Vanilla Summer Colors):</p><p>
+                              <strong>☀️ Sunday Party</strong> (Theme: Summer Vibes):</p><p>
                               7 EUR included Workshops from 17:30</p><p>
                               ** JacknJill Competition included in Full,Party &amp; Marathonpass otherwise participation costs 15 EUR</p>
                           </div>
