--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
               <a class="nav-link" href="#agenda-container">Program</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="DJs.html">DJs</a>
+              <a class="nav-link" href="Music-Suggestions.html">Live DJ Music-Suggestions</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="jack-n-jill-competition.html">Jack&Jill Competition</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="https://frankfurt-bachata-festival.de/">Level Up Festival</a>
             </li>
@@ -373,7 +373,233 @@
   <div class="page_wrapper">
 
 
- 
+<!-- ARTISTS Section Start -->
+<section class="our_value_section home_page row_am">
+  <div class="our_value_innner">
+    <div class="container">
+      <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
+        <span class="title_badge">ARTISTS</span>
+        <h2><span>BACHATA </span>ARTISTS</h2>
+      </div>
+      <!-- Value Slider Start -->
+      <div class="value_slider" data-aos="fade-in" data-aos-duration="1500">
+        <div class="owl-carousel owl-theme value-slider" >
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/E&N website.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Eduardo & Natalia</h3>
+                <p>Mexico
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/Kiko_Cristina.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Kiko & Christina</h3>
+                <p>Spain
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/R&M.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Roberto & Magdalena</h3>
+                <p>Mexico
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/D&I.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>David & Ilona</h3>
+                <p>Spain
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/DavidJessy.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>David & Jessy</h3>
+                <p>Germany
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/G&A website.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Guillermo & Anastasia</h3>
+                <p>Mexico
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/DNA2.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Daniel & Anastasia</h3>
+                <p>Russia 
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/SergioBeige.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Sergio & Beige</h3>
+                <p>Spain 
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/Alexej_Florence.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Alexej & Florence</h3>
+                <p>Germany
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Value Slider End -->
+    </div>
+  </div>
+</section>
+<!-- ARTISTS Section End -->
+
+<!--Create space between the two sections-->  
+
+<div style="height: 50px;"></div>
+
+
+<!-- ARTISTS Section Start -->
+<section class="our_value_section home_page row_am">
+  <div class="our_value_innner">
+    <div class="container">
+      <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
+        <span class="title_badge">DJS</span>
+        <h2><span>BACHATA </span>DJS</h2>
+      </div>
+          <!-- Value Slider Start -->
+          <div class="value_slider" data-aos="fade-in" data-aos-duration="1500">
+            <div class="owl-carousel owl-theme" id="value_slider">
+              <div class="item">
+                <div class="value_block">
+                  <div class="icon">
+                    <img src="images/DIMENSIONS.jpg" alt="image">
+                  </div>
+                  <div class="text">
+                    <h3>DJ Dimen5ions</h3>
+                    <p>UK
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="value_block">
+                  <div class="icon">
+                    <img src="images/DJ_Dia.jpg" alt="image">
+                  </div>
+                  <div class="text">
+                    <h3>DJ Dia</h3>
+                    <p>Portugal
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="value_block">
+                  <div class="icon">
+                    <img src="images/Roberto.jpg" alt="image">
+                  </div>
+                  <div class="text">
+                    <h3>DJ Roberto</h3>
+                    <p>Germany
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="value_block">
+                  <div class="icon">
+                    <img src="images/Edu.jpg" alt="image">
+                  </div>
+                  <div class="text">
+                    <h3>DJ Fusion</h3>
+                    <p>Mexico
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="value_block">
+                  <div class="icon">
+                    <img src="images/For website PAPITO.jpg" alt="image">
+                  </div>
+                  <div class="text">
+                    <h3>DJ Papito</h3>
+                    <p>Spain
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Value Slider End -->
+    </div>
+  </div>
+</section>
+<!-- ARTISTS Section End -->
+<section id="agenda-container" class="how_it_section">
+  <div class="how_it_inner" data-aos="fade-in" data-aos-duration="1500">
+    <div class="container">
+      <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
+        <span class="title_badge">Live DJ</span>
+        <h2>Suggest your favorite song</h2>
+        <p style="font-size: 30px; font-family: 'Arial';">
+          <a href="Music-Suggestions.html">Click Here to suggest your favorite song for the marathon.</a>
+        </p>
+        <h3>We will play it for you!</h3>
+      </div>
+    </div>
+  </div>    
+</section>
+<!-- Create space between the two sections-->
+<div style="height: 50px;"></div>
+
 <!-- Pricing-Section -->
 <section class="row_am pricing_section white_text" data-aos="fade-in" data-aos-duration="1500">
   <div id="pricing_container" class="pricing_inner">
@@ -496,6 +722,8 @@
           </div>
         </div>
 
+
+
         <div class="tab-pane fade" id="yearly" role="tabpanel" aria-labelledby="yearly-tab">
           <div class="row">
             <div class="col-md-4">
@@ -565,151 +793,6 @@
   <!-- container start end -->
 </section>
 <!-- Pricing-Section end -->
-
-<!-- ARTISTS Section Start -->
-<section class="our_value_section home_page row_am">
-  <div class="our_value_innner">
-    <div class="container">
-      <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
-        <span class="title_badge">ARTISTS</span>
-        <h2><span>BACHATA </span>ARTISTS</h2>
-      </div>
-      <!-- Value Slider Start -->
-      <div class="value_slider" data-aos="fade-in" data-aos-duration="1500">
-        <div class="owl-carousel owl-theme" id="value_slider">
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/E&N website.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>Eduardo & Natalia</h3>
-                <p>Mexico
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/Kiko_Cristina.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>Kiko & Christina</h3>
-                <p>Spain
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/R&M.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>Roberto & Magdalena</h3>
-                <p>Mexico
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/D&I.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>David & Ilona</h3>
-                <p>Spain
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/DavidJessy.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>David & Jessy</h3>
-                <p>Germany
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/G&A website.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>Guillermo & Anastasia</h3>
-                <p>Mexico
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/DNA2.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>Daniel & Anastasia</h3>
-                <p>Russia 
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/SergioBeige.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>Sergio & Beige</h3>
-                <p>Spain 
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="item">
-            <div class="value_block">
-              <div class="icon">
-                <img src="images/Alexej_Florence.jpg" alt="image">
-              </div>
-              <div class="text">
-                <h3>Alexej & Florence</h3>
-                <p>Germany
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Value Slider End -->
-    </div>
-  </div>
-</section>
-<!-- ARTISTS Section End -->
-
-<!-- ARTISTS Section Start -->
-<section class="our_value_section home_page row_am">
-  <div class="our_value_innner">
-    <div class="container">
-      <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
-        <span class="title_badge">DJS</span>
-        <h2><span>BACHATA </span>DJS</h2>
-        <br>
-        <a href="DJs.html" class="btn puprple_btn ml-0">See DJS</a>
-      </div>
-      <!-- Value Slider Start -->
-      <!-- Value Slider End -->
-    </div>
-  </div>
-</section>
-<!-- ARTISTS Section End -->
-
 
 <!-- AGENDA Section Start -->
         <section id="agenda-container" class="how_it_section">
@@ -1317,6 +1400,20 @@ You can also take the S-Bahn S1/S9 from the city centre (Hauptwache or Konstable
         card.style.top = `${topStyle}px`;
         topStyle += 30;
       })
+
+      $(".value-slider").each(function(){
+      $(this).owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        autoplay: true,
+        responsive: {
+          0: { items: 1 },
+          600: { items: 2 },
+          1000: { items: 3 }
+        }
+      });
+    });
 
     }
     );
