--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
             <p>Prepare for an extraordinary 3-day celebration of passion, rhythm, and pure joy at the Frankfurt Bachata Marathon!</p>
             <p>Get ready to immerse yourself in three days of non-stop marathon madness, where the spirit of Bachata takes center stage, and the dance floor becomes your playground!
             </p>
+            <p>Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p>
 
             <!-- <div class="qrcode">
               <img src="images/qrcode.png" alt="image">
@@ -816,7 +817,6 @@
               <p class="text-center">Workshop included</p>
             </div>
             <div class="address_block">
-              <p class="text-center">Alt-Bornheim 35<br>60385 Frankfurt am Main</p>
             </div>
           </div>
         </div>
@@ -833,6 +833,9 @@
               <h3>25.00 <span>EUR</span></h3>
               <p class="text-center">With Workshop</p>
             </div>
+            <div class="address_block">
+              <p class="text-center">Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p>
+            </div>
           </div>
         </div>
         
@@ -848,6 +851,9 @@
               <h3>30.00 <span>EUR</span></h3>
               <p class="text-center">With Workshop</p>
             </div>
+            <div class="address_block">
+              <p class="text-center">Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p>
+            </div>
           </div>
         </div>
         
@@ -860,6 +866,9 @@
             <div class="pricing">
               <h3>7.00 <span>EUR</span></h3>
               <p class="text-center">Workshops from 17:30 included</p>
+            </div>
+            <div class="address_block">
+              <p class="text-center">Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p>
             </div>
           </div>
         </div>
