--- a/index.html
+++ b/index.html
@@ -945,15 +945,17 @@
                           <div class="event-details">
                             <p><strong>🎉 Thursday Party</strong> (Theme: Neon):</p><p>
                               5 EUR included Workshop</p><p>
-                              <Address>Address:Alt-Bornheim 35, 60385 Frankfurt am Main**</Address>
                               <strong>💃 Friday Party</strong> (Theme: Red & Black):</p><p>
                               20 EUR without Workshops / 25 EUR with Workshops</p><p>
+                              <Address>Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p><p>
                               <strong>🥂 Saturday Party</strong> (Theme: Gala & Gold):</p><p>
                               25 EUR without Workshops / 30 EUR with Workshops</p><p>
+                              <Address>Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p><p>
                               <strong>☀️ Sunday Party</strong> (Theme: Summer Vibes):</p><p>
                               7 EUR included Workshops from 17:30</p><p>
                               ** JacknJill Competition included in Full,Party &amp; Marathonpass otherwise participation costs 15 EUR</p>
-                          </div>
+                              <Address>Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p><p>
+                            </div>
                       </div>
                       <div class="text-center">
                         <h5 class="display-4">Jack n Jill - Dance Competition 2025</h5>
