--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="jack-n-jill-competition.html">Jack&Jill Competition</a>
-            </li> -->
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="https://frankfurt-bachata-festival.de/">Level Up Festival</a>
             </li>
@@ -633,7 +633,7 @@
                     <span>Get all of it</span>
                   </div>
                   <div class="pricing">
-                    <h3>120.00 <span>/ticket</span></h3>
+                    <h3>74.00 <span>/ticket</span></h3>
                   </div>
                   <div class="ticket_pic">
                     <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
@@ -653,7 +653,7 @@
                     </li>
                   </ul>
                   <div class="btn_block">
-                    <a href="#" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
+                    <a href="https://buy.stripe.com/9AQ02h0seavj7lefZ0" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
                     <div class="btn_bottom"></div>
                   </div>
                 </div>
@@ -666,7 +666,7 @@
                     <!-- <span class="offer">Save 50%</span> -->
                   </div>
                   <div class="pricing">
-                    <h3>€75.00 <span>/ticket</span></h3>
+                    <h3>€49.00 <span>/ticket</span></h3>
                   </div>
                   <div class="ticket_pic">
                     <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
@@ -686,7 +686,7 @@
                     </li>
                   </ul>
                   <div class="btn_block white_btn">
-                    <a href="#" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
+                    <a href="https://buy.stripe.com/9AQ8yNdf0fPD4928wz" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
                     <div class="btn_bottom"></div>
                   </div>
                 </div>
@@ -698,7 +698,7 @@
                     <span>3 Party Nights (Fr, Sa, Su)</span>
                   </div>
                   <div class="pricing">
-                    <h3>55.00 <span>/ticket</span></h3>
+                    <h3>39.00<span>/ticket</span></h3>
                   </div>
                   <div class="ticket_pic">
                     <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
@@ -714,7 +714,7 @@
                     </li>
                   </ul>
                   <div class="btn_block">
-                    <a href="#" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
+                    <a href="https://book.stripe.com/bIY8yNb6S6f3eNG3cd" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
                     <div class="btn_bottom"></div>
                   </div>
                 </div>
