--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
             <!-- h1 -->
             <h2 style="font-family: 'Arizonia', cursive;"><span>Experience Your  Passion all Day and Night Long!</span></h2>
             </br>
-            <h2>24th - 27th April 2025</h2>
+            <h2>26th - 30th April 2026</h2>
             <br>
             <!-- p -->
             
@@ -608,7 +608,7 @@
     <div class="container">
       <div class="section_title" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
         <span class="title_badge">Pricing</span>
-        <h2>ONLY TICKETS AVAILABLE AT DOOR</h2>
+        <h2>EARLY BIRD PRICES</h2>
       </div>
 
       <!-- Pricing Table Tabs -->
@@ -653,7 +653,7 @@
                     </li>
                   </ul>
                   <div class="btn_block">
-                    <a href="https://buy.stripe.com/9AQ02h0seavj7lefZ0" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
+                    <a href="https://buy.stripe.com/9AQ02h0seavj7lefZ0" class="btn puprple_btn ml-0">Buy Ticket</a>
                     <div class="btn_bottom"></div>
                   </div>
                 </div>
@@ -686,7 +686,7 @@
                     </li>
                   </ul>
                   <div class="btn_block white_btn">
-                    <a href="https://buy.stripe.com/9AQ8yNdf0fPD4928wz" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
+                    <a href="https://buy.stripe.com/9AQ8yNdf0fPD4928wz" class="btn puprple_btn ml-0">Buy Ticket</a>
                     <div class="btn_bottom"></div>
                   </div>
                 </div>
@@ -714,7 +714,7 @@
                     </li>
                   </ul>
                   <div class="btn_block">
-                    <a href="https://book.stripe.com/bIY8yNb6S6f3eNG3cd" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
+                    <a href="https://book.stripe.com/bIY8yNb6S6f3eNG3cd" class="btn puprple_btn ml-0">Buy Ticket</a>
                     <div class="btn_bottom"></div>
                   </div>
                 </div>
@@ -958,7 +958,7 @@
                             </div>
                       </div>
                       <div class="text-center">
-                        <h5 class="display-4">Jack n Jill - Dance Competition 2025</h5>
+                        <h5 class="display-4">Jack n Jill - Dance Competition 2026</h5>
                         <p class="lead">Get ready to showcase your talent! Join us for the most exciting bachata social competition of the year. Win amazing prizes and recognition.</p>
                         <strong><a href="jack-n-jill-competition.html"> Registration Link </a></strong>
                     </div>
@@ -980,7 +980,7 @@
 
 <!-- <div class="photo-container">
   <img class="photo" src="https://lan27nbio8.ufs.sh/f/0dhEbmpq2JyrfOUZrlSfaZs9k1BGAER6heW3XxJ4nmPLoOlw" alt="Large Horizontal Photo">  <div class="overlay">
-      <div class="title">Frankfurt Bachata Marathon 2025</div>
+      <div class="title">Frankfurt Bachata Marathon 2026</div>
                       <div class="btn_block description">
                   <a href="#pricing_container" class="btn puprple_btn ml-0">BUY NOW</a>
                   <div clTailorass="btn_bottom"></div>
@@ -989,9 +989,9 @@
 
 <section class="photo-section">
   <div class="photo-container">
-      <img src="https://lan27nbio8.ufs.sh/f/0dhEbmpq2JyrfOUZrlSfaZs9k1BGAER6heW3XxJ4nmPLoOlw" alt="frankfurt bachata marathon 2025 line up" class="photo">
+      <img src="https://lan27nbio8.ufs.sh/f/0dhEbmpq2JyrfOUZrlSfaZs9k1BGAER6heW3XxJ4nmPLoOlw" alt="frankfurt bachata marathon 2026 line up" class="photo">
       <div class="overlay">
-          <h1 class="title">Frankfurt Bachata Marathon 2025</h1>
+          <h1 class="title">Frankfurt Bachata Marathon 2026</h1>
           <p class="subtitle">Bachata All Day All Night.</p>
           <Address>Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p><p></p>
           <div class="btn_block description">
@@ -1108,7 +1108,7 @@
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                       <div class="card-body">
-                        <p>The Frankfurt Bachata Marathon will take place from 24th to 27th April 2025.</p>
+                        <p>The Frankfurt Bachata Marathon will take place from 26th to 30th April 2026.</p>
                       </div>
                     </div>
                   </div>
