--- a/index.html
+++ b/index.html
@@ -427,8 +427,44 @@
                 <img src="images/D&I.jpg" alt="image">
               </div>
               <div class="text">
-                <h3>David & Ilona</h3>
+                <h3>Ilona</h3>
+                <p>Russia
+                </p>
+              </div>
+            </div>
+          </div>
+            <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/Alfredo Andrea.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Alfredo & Andrea</h3>
                 <p>Spain
+                </p>
+              </div>
+            </div>
+          </div>
+           <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/Rafa Eli.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Rafael & Elizabeth</h3>
+                <p>Mexico & Russia
+                </p>
+              </div>
+            </div>
+          </div>
+                      <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/Burak Estefania.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Burak & Estefania</h3>
+                <p>Turkey & Spain
                 </p>
               </div>
             </div>
@@ -487,8 +523,32 @@
                 <img src="images/Alexej_Florence.jpg" alt="image">
               </div>
               <div class="text">
-                <h3>Alexej & Florence</h3>
-                <p>Germany
+                <h3>Hari</h3>
+                <p>India
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/Annita.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Annita</h3>
+                <p>Hungary
+                </p>
+              </div>
+            </div>
+          </div>
+                    <div class="item">
+            <div class="value_block">
+              <div class="icon">
+                <img src="images/Wesley Tatiana.jpg" alt="image">
+              </div>
+              <div class="text">
+                <h3>Wesley & Tatiana</h3>
+                <p>Brazil & Colombia
                 </p>
               </div>
             </div>
@@ -535,8 +595,8 @@
                     <img src="images/DJ_Dia.jpg" alt="image">
                   </div>
                   <div class="text">
-                    <h3>DJ Dia</h3>
-                    <p>Portugal
+                    <h3>DJ La Pasion</h3>
+                    <p>Iran
                     </p>
                   </div>
                 </div>
