--- a/index.html
+++ b/index.html
@@ -947,19 +947,19 @@
                 <span class="title_badge">Agenda Overview</span>
                 <h2>Weekend Program</h2>
                 <p></p>
-                <h3>Bachata Sensual, Bachazouk, Bachata Moderna, Acrobatics, Bachata Tradicional. Learn the amazing movements and techniques from the best instructors in Germany and Europe</h2>
+                <h3>Bachazouk, Bachata Sensual, Zouk & Masterclasses. Learn the amazing movements and techniques from the best instructors in Germany and Europe</h2>
               </div>
               <div class="row">
                 <div class="col">
                   <div class="steps_block step_border" data-aos="fade-up" data-aos-duration="1500">
                     <div class="steps">
                       <div class="icon">
-                        <img src="images/schedule.webp" alt="image">
+                        <img src="images/hintergrund.webp" alt="image">
                       </div>
                       <div class="icon">
                         <img src="images/djs.webp" alt="image">
                       </div>
-                      <div class="text">
+                      <!-- <div class="text">
                         <h3>Join us!!!</h3>
                         <p>&#9552;&#9552;&#9733; Bachata Artists&#9733;&#9552;&#9552;</p><p>
                           Kiko &amp; Christina</p><p>
@@ -1016,7 +1016,7 @@
                               ** JacknJill Competition included in Full,Party &amp; Marathonpass otherwise participation costs 15 EUR</p>
                               <Address>Christian-Pleß-Straße 11-13 <br> 63069 Offenbach am Main</p><p>
                             </div>
-                      </div>
+                      </div> -->
                       <div class="text-center">
                         <h5 class="display-4">Jack n Jill - Dance Competition 2026</h5>
                         <p class="lead">Get ready to showcase your talent! Join us for the most exciting bachata social competition of the year. Win amazing prizes and recognition.</p>
@@ -1049,7 +1049,7 @@
 
 <section class="photo-section">
   <div class="photo-container">
-      <img src="https://lan27nbio8.ufs.sh/f/0dhEbmpq2JyrfOUZrlSfaZs9k1BGAER6heW3XxJ4nmPLoOlw" alt="frankfurt bachata marathon 2026 line up" class="photo">
+      <img src="images/hintergrund.webp" alt="frankfurt bachata marathon 2026 line up" class="photo">
       <div class="overlay">
           <h1 class="title">Frankfurt Bachata Marathon 2026</h1>
           <p class="subtitle">Bachata All Day All Night.</p>
