--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <div class="col-lg-6 col-12 banner_content_colom" data-aos="fade-up" data-aos-duration="1500">
           <!-- banner text -->
           <div class="banner_text">
-            <h1> Frankfurt Bachata Marathon </h1>
+            <h1> Frankfurt Bachata & Zouk Marathon </h1>
             <!-- h1 -->
             <h2 style="font-family: 'Arizonia', cursive;"><span>Experience Your  Passion all Day and Night Long!</span></h2>
             </br>
