--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     <div class="container">
       <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
         <span class="title_badge">ARTISTS</span>
-        <h2><span>BACHATA </span>ARTISTS</h2>
+        <h2><span>BACHATA & ZOUK</span>ARTISTS</h2>
       </div>
       <!-- Value Slider Start -->
       <div class="value_slider" data-aos="fade-in" data-aos-duration="1500">
@@ -403,8 +403,8 @@
                 <img src="images/Kiko_Cristina.jpg" alt="image">
               </div>
               <div class="text">
-                <h3>Kiko & Christina</h3>
-                <p>Spain
+                <h3>Carlos & Fernanda</h3>
+                <p>Brazil
                 </p>
               </div>
             </div>
@@ -511,7 +511,7 @@
                 <img src="images/SergioBeige.jpg" alt="image">
               </div>
               <div class="text">
-                <h3>Sergio & Beige</h3>
+                <h3>Borja & Lydia</h3>
                 <p>Spain 
                 </p>
               </div>
@@ -572,7 +572,7 @@
     <div class="container">
       <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
         <span class="title_badge">DJS</span>
-        <h2><span>BACHATA </span>DJS</h2>
+        <h2><span>BACHATA & ZOUK</span>DJS</h2>
       </div>
           <!-- Value Slider Start -->
           <div class="value_slider" data-aos="fade-in" data-aos-duration="1500">
