--- a/index.html
+++ b/index.html
@@ -956,9 +956,9 @@
                       <div class="icon">
                         <img src="images/hintergrund.webp" alt="image">
                       </div>
-                      <div class="icon">
+                      <!-- <div class="icon">
                         <img src="images/djs.webp" alt="image">
-                      </div>
+                      </div> -->
                       <!-- <div class="text">
                         <h3>Join us!!!</h3>
                         <p>&#9552;&#9552;&#9733; Bachata Artists&#9733;&#9552;&#9552;</p><p>
