--- a/index.html
+++ b/index.html
@@ -668,11 +668,11 @@
     <div class="container">
       <div class="section_title" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
         <span class="title_badge">Pricing</span>
-        <h2>EARLY BIRD PRICES</h2>
+        <h2>TICKETS UNAVAILABLE</h2>
       </div>
 
       <!-- Pricing Table Tabs -->
-      <ul class="nav nav-tabs" id="myTab" role="tablist" data-aos="fade-up" data-aos-duration="1500">
+      <!-- <ul class="nav nav-tabs" id="myTab" role="tablist" data-aos="fade-up" data-aos-duration="1500">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="monthly-tab" data-toggle="tab" data-target="#monthly" type="button"
             role="tab" aria-controls="monthly" aria-selected="true">All Weekend</button>
@@ -723,7 +723,6 @@
                   <div class="heading">
                     <h3>Marathon Pass</h3>
                     <span>All Parties</span>                        
-                    <!-- <span class="offer">Save 50%</span> -->
                   </div>
                   <div class="pricing">
                     <h3>€49.00 <span>/ticket</span></h3>
@@ -848,7 +847,7 @@
         <p class="contact_text text-center" data-aos="fade-up" data-aos-duration="1500">For <strong>GROUP-PASSES -></strong><a href="special-offers.html"> Click Here</a>.</p>
         <p class="contact_text text-center" data-aos="fade-up" data-aos-duration="1500">Not
           sure what to choose ? <a href="contact.html">contact us</a> or check <a href="#faqsec">FAQ Section</a>.</p>
-      </div>
+      </div> -->
     </div>
   </div>
   <!-- container start end -->
